syntax = "proto3";
package topchain.subscription;

option go_package = "topchain/x/subscription/types";

message Subscription {
  string id = 1;
  string deal_id = 2;
  string provider = 3;
  uint64 start_block = 4;
  uint64 end_block = 5;
}

message SubscriptionIds {
  repeated string ids = 1;
}
